[project]
name = "Developer_Tools_Recommender"
version = "0.1.0"
description = "Agent that recommends developer tools tailored to given scenario"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "firecrawl-py>=4.24.1",
  "langchain>=1.2.17",
  "langchain-openai>=1.2.1",
  "langgraph>=1.1.10",
  "pydantic>=2.13.3",
  "python-dotenv>=1.2.2",
]
